--- a/resources/css/question-editor.css
+++ b/resources/css/question-editor.css
@@ -326,3 +326,7 @@
 #cms-preview .question-editor-preview-header {
     box-shadow: 0 3px 8px 0 rgba(4, 31, 116, 0.2);
 }
+
+.word-break-words {
+    word-break: break-word;
+}
